<resources>
    <string name="app_name">Arcile</string>
    
    <!-- General -->
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="refresh">Refresh</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="selected_count">%1$d selected</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
...
